--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 *.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
+/.gradle
+/.idea
 /build
 /app/build
+/gradle
 /captures
+.local.properties
+.DS_Store
 .externalNativeBuild
 cateon_cook_key.jks
