--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
         maven {
             url 'https://maven.fabric.io/public'
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:3.1.2' // google-services plugin
-        classpath 'io.fabric.tools:gradle:1.25.1' // Crashlytics de Firebase
+        classpath 'io.fabric.tools:gradle:1.25.4' // Crashlytics de Firebase
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        google()
         jcenter()
         maven {
             url "https://maven.google.com" // Google's Maven repository
