Actualizando el error en la carga de imágenes, actualizar a version 1.1

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:11.4.2'
     implementation 'com.google.firebase:firebase-crash:11.4.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0' //implementation 'com.github.bumptech.glide:glide:3.7.0'
     //Pdf
 
 }
